# apue.2e

./: Make.defines  Make.defines.linux  Makefile  Makefile.am  Makefile.in  apue.h  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  tags
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
environ/: hello1.c
file/: Makefile  Makefile.am  Makefile.in  a.out  access  cdpwd  changemod  devrdev  fileflags  filetype  ftw4  hello  hole  longpath  ls1  my_ls1.c  mycd  seek  testerror  uidgid  umask  unlink  zap
file/.deps/: access.Po  cdpwd.Po  changemod.Po  devrdev.Po  fileflags.Po  filetype.Po  ftw4.Po  hello.Po  hole.Po  longpath.Po  ls1.Po  mycd.Po  seek.Po  testerror.Po  uidgid.Po  umask.Po  unlink.Po  zap.Po
lib/: Makefile  Makefile.am  Makefile.in
lib/.deps/: bufargs.Po  cliconn.Po  clrfl.Po  daemonize.Po  errorlog.Po  lockreg.Po  locktest.Po  openmax.Po  pathalloc.Po  popen.Po  prexit.Po  prmask.Po  ptyfork.Po  ptyopen.Po  readn.Po  recvfd.Po  senderr.Po  sendfd.Po  servaccept.Po  servlisten.Po  setfl.Po  signal.Po  signalintr.Po  sleep.Po  sleepus.Po  spipe.Po  tellwait.Po  ttymodes.Po  writen.Po
mycat/: Makefile  Makefile.am  Makefile.in  a.out  data  fgetsfputs  getcputc  my_mycat.c  mycat
mycat/.deps/: fgetsfputs.Po  getcputc.Po  mycat.Po
