bin_PROGRAMS =access cdpwd changemod devrdev fileflags filetype ftw4 \
		hello hole longpath ls1 mycd seek testerror \
		uidgid umask unlink zap
cdpwd_SOURCES = cdpwd.c
access_SOURCES = access.c
changemod_SOURCES = changemod.c
devrdev_SOURCES = devrdev.c
fileflags_SOURCES = fileflags.c
filetype_SOURCES = filetype.c
ftw4_SOURCES = ftw4.c
hello_SOURCES =hello.c
hole_SOURCES = hole.c
longpath_SOURCES = longpath.c
ls1_SOURCES = ls1.c
mycd_SOURCES = mycd.c
seek_SOURCES = seek.c
testerror_SOURCES = testerror.c
uidgid_SOURCES = uidgid.c
umask_SOURCES = umask.c
unlink_SOURCES = unlink.c
zap_SOURCES = zap.c
